--- a/Ubiquitous2/View/StatusWindow.xaml
+++ b/Ubiquitous2/View/StatusWindow.xaml
@@ -42,6 +42,15 @@
             <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <Grid MinWidth="32"  Margin="0,0,0,-6" HorizontalAlignment="Center" VerticalAlignment="Center" Opacity="0.9">
+                            <Grid.Style>
+                                <Style>
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding HideViewersCounter}" Value="True">
+                                            <Setter Property="Grid.Visibility" Value="Hidden"/>
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Grid.Style>
                             <Grid.ToolTip>
                                 <ToolTip HasDropShadow="False" Placement="Top" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFCBCBCB" StaysOpen="True">
                                     <ToolTip.Resources>
