--- a/Ubiquitous2/App.xaml
+++ b/Ubiquitous2/App.xaml
@@ -13,7 +13,7 @@
     <Application.Resources>
     	<ResourceDictionary>
     		<ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Skins/Simple/Skin.xaml"/>
+                <ResourceDictionary Source="Skins/Main/Skin.xaml"/>
             </ResourceDictionary.MergedDictionaries>
     		<!--Global View Model Locator-->
     		<vm:ViewModelLocator x:Key="Locator"
