--- a/Ubiquitous2/View/SettingsWindow.xaml
+++ b/Ubiquitous2/View/SettingsWindow.xaml
@@ -28,7 +28,7 @@
         <Converter:StringToIsChecked x:Key="stringToIsCheckedConverter"/>
     </Window.Resources>
     <Grid>
-        <fluent:BackstageTabControl SelectedIndex="0" Background="#FF323232" Style="{DynamicResource SettingsStyle}">
+        <fluent:BackstageTabControl SelectedIndex="2" Background="#FF323232" Style="{DynamicResource SettingsStyle}">
             <fluent:BackstageTabItem Header="Chats">
                 <Grid>
                     <ItemsControl ItemsSource="{Binding Chats}"
@@ -91,17 +91,18 @@
             <fluent:BackstageTabItem Header="Theme">
                 <ScrollViewer Template="{DynamicResource ScrollStyle}">
                     <VirtualizingStackPanel Orientation="Vertical">
-                        <RadioButton Command="{Binding SelectTheme}" CommandParameter="Main" Style="{DynamicResource ThemeRadioButton}" GroupName="ThemeButtons" IsChecked="{Binding CurrentTheme, Converter={StaticResource stringToIsCheckedConverter}, ConverterParameter=Main}">
-                            <StackPanel Orientation="Horizontal">
-                                <TextBlock Width="100" VerticalAlignment="Center" Margin="0,0,8,0">Main</TextBlock>
-                                <Image Width="150" Source="/Ubiquitous2;component/Resources/MainThemeThumbnail.png"/>
-                            </StackPanel>
+                        <RadioButton Command="{Binding SelectTheme}" CommandParameter="Main" Style="{DynamicResource ThemeRadioButton}" GroupName="ThemeButtons" IsChecked="{Binding CurrentTheme, Converter={StaticResource stringToIsCheckedConverter}, ConverterParameter=Main}" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center">
+                            <Grid>
+                                    <TextBlock VerticalAlignment="Center" Margin="0,0,8,0" HorizontalAlignment="Left">Main</TextBlock>
+                                    <Image Width="150" Source="/Ubiquitous2;component/Resources/MainThemeThumbnail.png" DockPanel.Dock="Right" HorizontalAlignment="Right"/>
+                            </Grid>
+
                         </RadioButton>
-                        <RadioButton Command="{Binding SelectTheme}" CommandParameter="Simple" Style="{DynamicResource ThemeRadioButton}" GroupName="ThemeButtons" IsChecked="{Binding CurrentTheme, Converter={StaticResource stringToIsCheckedConverter}, ConverterParameter=Simple}">
-                            <StackPanel Orientation="Horizontal">
-                                <TextBlock Width="100" VerticalAlignment="Center" Margin="0,0,8,0">Simple</TextBlock>
-                                <Image Width="150" Source="/Ubiquitous2;component/Resources/SimpleThemeThumbnail.png"/>
-                            </StackPanel>
+                        <RadioButton Command="{Binding SelectTheme}" CommandParameter="Simple" Style="{DynamicResource ThemeRadioButton}" GroupName="ThemeButtons" IsChecked="{Binding CurrentTheme, Converter={StaticResource stringToIsCheckedConverter}, ConverterParameter=Simple}" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center">
+                            <Grid>
+                                <TextBlock VerticalAlignment="Center" Margin="0,0,8,0" HorizontalAlignment="Left">Simple</TextBlock>
+                                <Image Width="150" Source="/Ubiquitous2;component/Resources/SimpleThemeThumbnail.png" DockPanel.Dock="Right" HorizontalAlignment="Right"/>
+                            </Grid>
                         </RadioButton>
                     </VirtualizingStackPanel>
                 </ScrollViewer>
