--- a/Ubiquitous2/View/SteamGuardWindow.xaml
+++ b/Ubiquitous2/View/SteamGuardWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         x:Name="steamGuardWindow"
+        UseLayoutRounding="True"
         Topmost="True"        
         Title="Enter Steam guard code" Height="152" Width="220">
     <Window.DataContext>
